# detty

./: Cargo.toml  LICENSE.txt  README.md
src/: color.rs  edit_diff.rs  editor.rs  error.rs  input.rs  language.rs  macros.rs  main.rs  message.rs  prompt.rs  row.rs  screen.rs  status.rs
