[package]
name = "detty"
authors = ["iamgabrielsoft@gmail.com"]
version = "0.1.0"
edition = "2021"
description = "detty is a simplistic editor"
keywords = ["text-editor", "editor", "terminal", "utf-8"]
repository = "https://github.com/iamgabrielsoft/detty"
readme = "README.md"
categories = ["text-editors", "development-tools"]
license = "MIT"
include = ["src/**/*.rs", "Cargo.toml"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]
termios = "0.3"
term_size = "0.3"
unicode-width = "0.1"
term = "0.7"
getopts = "0.2"
signal-hook = "0.3"
jemallocator = "0.3"


[dev-dependencies]
rand = "0.7"
